Fix CSS transitions on Safari and add transitions to iOS

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -164,7 +164,7 @@
 .formholder, .logoformholder {
 	position:relative;
 	transform:translate3d(0,0,0);
-	transition:all .3s;
+	transition:transform .3s, padding .3s;
 }
 
 .clientsformwrapper:after {
