--- a/app/assets/stylesheets/invoice.scss
+++ b/app/assets/stylesheets/invoice.scss
@@ -8,7 +8,7 @@
 	//top:97px;
 	left:141px;
 	font-size:17px;
-	transition: all .3s;
+	transition: transform .3s;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
