--- a/app/assets/stylesheets/z_media_queries.scss
+++ b/app/assets/stylesheets/z_media_queries.scss
@@ -6,7 +6,7 @@
 	    left: 0;
 	    margin-left: 320px;
 	    max-width: none;
-	    transition:none !important;
+	    //transition:none !important;
 	}
 
 	#invoicewrapper.show {
